api spec done
